--- a/Eurorack_EDA.ipynb
+++ b/Eurorack_EDA.ipynb
@@ -881,9 +881,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3a0f44e7-5a97-4708-ac69-b89b91790f20",
+   "metadata": {},
+   "source": [
+    "## Wes Leggo-Morrell 2024\n",
+    "\n",
+    "#### **[Instagram](https://www.instagram.com/modular.mooch)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd046f15-2b75-46dc-b854-ded5148914db",
+   "id": "4e745e68-c604-4315-89ad-854ad701d7dc",
    "metadata": {},
    "outputs": [],
    "source": []
