--- a/Eurorack_EDA.ipynb
+++ b/Eurorack_EDA.ipynb
@@ -887,16 +887,10 @@
    "source": [
     "## Wes Leggo-Morrell 2024\n",
     "\n",
-    "#### **[Instagram](https://www.instagram.com/modular.mooch)**"
+    "#### **[Instagram](https://www.instagram.com/modular.mooch)**\n",
+    "\n",
+    "#### **[GitHub](https://github.com/WesDaMooch)**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e745e68-c604-4315-89ad-854ad701d7dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
