Ypdates to notebooks

--- a/Dataset_Cleaning.ipynb
+++ b/Dataset_Cleaning.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "Remove any modules by their function, such as 'Blank Panel' or 'Expander'. Drop duplicate modules with same name and manufacturer. Uses a pretty slow and clunky way of detecting and removing duplicates with a panel descriptor, e.g. Make Noise - MATHS (black panel) will get dropped by the original MATHS. Removed modules are merged with the original, to try and obtain more accurate data. \n",
+    "Remove any modules by their function, such as 'Blank Panel' or 'Expander'. Drop duplicate modules with same name and manufacturer. Uses a pretty slow and clunky way of detecting and removing duplicates with a panel descriptor, e.g. Make Noise - MATHS (black panel) will get dropped by the original MATHS. Removed modules are merged with the original to try and obtain more accurate data. \n",
     "\n",
     "<br>\n",
     "\n",
@@ -1467,7 +1467,7 @@
     "#fill na values\n",
     "\n",
     "#find means to fill certain na values\n",
-    "#round to one decimal place\n",
+    "#round\n",
     "mean_depth = round(df['Depth'].mean(), 1)\n",
     "mean_pos12 = round(df['+12V (mA)'].mean(), 1)\n",
     "mean_neg12 = round(df['-12V (mA)'].mean(), 1)\n",
@@ -1484,9 +1484,7 @@
     "           'Available': 'No Info'\n",
     "          } \n",
     "\n",
-    "#for the ML data set, want to remove items that have nans, so dont fill them\n",
-    "\n",
-    "df = df.fillna(value=to_fill) #inlace old method"
+    "df = df.fillna(value=to_fill)"
    ]
   },
   {
@@ -1538,6 +1536,18 @@
     "#N = 1000\n",
     "YEAR = 2024\n",
     "df.to_csv(f\"{N}_most_popular_eurorack_modules_{YEAR}.csv\") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50360741-2a12-43a2-8d62-f4b1da74fd9b",
+   "metadata": {},
+   "source": [
+    "## Wes Leggo-Morrell 2024\n",
+    "\n",
+    "#### **[Instagram](https://www.instagram.com/modular.mooch)**\n",
+    "\n",
+    "#### **[GitHub](https://github.com/WesDaMooch)**"
    ]
   }
  ],
