--- a/Eurorack_EDA.ipynb
+++ b/Eurorack_EDA.ipynb
@@ -24,7 +24,7 @@
     "- <code>Rating</code> A mean average of user ratings from 0-5. <br>\r\n",
     "- <code>Votes</code> Number of users who left a rating. <br>\r\n",
     "- <code>Available</code> Information regarding whether the module is currently being produced. <br>\r\n",
-    "- <code>Approved</code> Has the module’s specifications been approved by the manufacturer. <br>facturer.   \r\n"
+    "- <code>Approved</code> Has the module’s specifications been approved by the manufaacturer.   \r\n"
    ]
   },
   {
