--- a/Generate_Dataset.ipynb
+++ b/Generate_Dataset.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "- <code>get_module_links</code> get links from modulargrid.net main eurorack browser page. \n",
     "    Pass browser URL, number of pages to load (1 page = 40 modules), and a short delay to load the page as webdriver scrolls (1.5 - 2 secs). \n",
-    "    Returns list of links for loaded module individual pages.\n",
+    "    Returns list of links to module pages.\n",
     "  \n",
     "<br>\n",
     "\n",
@@ -525,12 +525,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d548a05-cb2c-41ec-ac94-051b894eda69",
+   "cell_type": "markdown",
+   "id": "282aa3d9-dc6c-4d44-885b-94fbdd4d3cbe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Wes Leggo-Morrell 2024\n",
+    "\n",
+    "#### **[Instagram](https://www.instagram.com/modular.mooch)**\n",
+    "\n",
+    "#### **[GitHub](https://github.com/WesDaMooch)**"
+   ]
   }
  ],
  "metadata": {
