--- a/Eurorack_EDA.ipynb
+++ b/Eurorack_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "58c71f56-4ea1-4a26-bf9b-0c8a3289d185",
+   "id": "20d53726-a0dd-4fc7-afb6-a6e3a142ef7b",
    "metadata": {},
    "source": [
     "# 1000 Most Popular Eurorack Modules in 2024 EDA\n",
@@ -12,19 +12,20 @@
     "Experimental data analysis of the most popular eurorack modules in 2024, sourced form ModularGrid. A look at the manufacturers in the industry, the size, price, functions, and popularity of modules and companies. \n",
     "\n",
     "### Attributes\n",
-    "- <code>Name</code> The name of the module. <br>\r\n",
-    "- <code>Manufacturer</code> Name of the Company that designed the module. <br>\r\n",
-    "- <code>HP</code> Size of the front panel in Horizontal Pitch, where one HP is 5.08mm. <br>\r\n",
-    "- <code>Depth</code> Distance from the font panel to the back of the module in mm. <br>\r\n",
-    "- <code>+12V (mA)</code> Current draw of the positive 12-volt rail. <br>\r\n",
-    "- <code>-12V (mA)</code> Current draw of the negative 12-volt rail. <br>\r\n",
-    "- <code>+5V (mA)</code> Current draw of the positive 5-volt rail. <br>\r\n",
-    "- <code>Price (€)</code> Set or estimated price of the module in Euros. <br>\r\n",
-    "- <code>Racks</code> Number of virtual user racks the module features in. <br>\r\n",
-    "- <code>Rating</code> A mean average of user ratings from 0-5. <br>\r\n",
-    "- <code>Votes</code> Number of users who left a rating. <br>\r\n",
-    "- <code>Available</code> Information regarding whether the module is currently being produced. <br>\r\n",
-    "- <code>Approved</code> Has the module’s specifications been approved by the manufaacturer.   \r\n"
+    "- <code>Name</code> The name of the module. <br>\n",
+    "- <code>Manufacturer</code> Name of the Company that designed the module. <br>\n",
+    "- <code>Functions</code> List of features that the module has been tagged with. <br>\n",
+    "- <code>HP</code> Size of the front panel in Horizontal Pitch, where one HP is 5.08mm. <br>\n",
+    "- <code>Depth</code> Distance from the font panel to the back of the module in mm. <br>\n",
+    "- <code>+12V (mA)</code> Current draw of the positive 12-volt rail. <br>\n",
+    "- <code>-12V (mA)</code> Current draw of the negative 12-volt rail. <br>\n",
+    "- <code>+5V (mA)</code> Current draw of the positive 5-volt rail. <br>\n",
+    "- <code>Price (€)</code> Set or estimated price of the module in Euros. <br>\n",
+    "- <code>Racks</code> Number of virtual user racks the module features in. <br>\n",
+    "- <code>Rating</code> A mean average of user ratings from 0-5. <br>\n",
+    "- <code>Votes</code> Number of users who left a rating. <br>\n",
+    "- <code>Available</code> Information regarding whether the module is currently being produced. <br>\n",
+    "- <code>Approved</code> Has the module’s specifications been approved by the manufacturer. "
    ]
   },
   {
